# django-compose-shob

./: Cargo.toml  LICENSE  README.md
src/: deploy.rs  django.rs  docker_compose.rs  main.rs  utils.rs
