[package]
name = "ddc-shob"
version = "0.4.0"
authors = ["Chiliseed <info@chiliseed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.16"
globset = "0.4.5"
log = "0.4.11"
pretty_env_logger = "0.4.0"
ssh2 = "0.8.2"
structopt = { version = "0.3.15", default-features = false}
tar = "0.4.29"
uuid = { version = "0.8.1", features = ["v4"] }
walkdir = "2.3.1"
