[package]
name = "ddc-shob"
version = "0.4.2"
authors = ["Chiliseed <info@chiliseed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.19"
globset = "0.4.6"
log = "0.4.11"
pretty_env_logger = "0.4.0"
ssh2 = "0.8.2"
structopt = { version = "0.3.20", default-features = false }
tar = "0.4.30"
uuid = { version = "0.8.1", features = ["v4"] }
walkdir = "2.3.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
